// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ShimmerText matches snapshot with custom classes 1`] = `
<div
  class="relative inline-block leading-none"
>
  <span
    class="block text-[13px] leading-[1.667]! font-[420] custom-base"
    style="color: rgb(143, 143, 143);"
  >
    Snapshot Test
  </span>
  <span
    aria-hidden="true"
    class="pointer-events-none absolute top-0 left-0 bg-clip-text text-[13px] leading-[1.667]! font-[420] text-transparent custom-shimmer"
    style="background-size: 200% 100%; background-repeat: no-repeat; background-position: 120% 0%;"
  >
    Snapshot Test
  </span>
</div>
`;

exports[`ShimmerText matches snapshot with default props 1`] = `
<div
  class="relative inline-block leading-none"
>
  <span
    class="block text-[13px] leading-[1.667]! font-[420]"
    style="color: rgb(143, 143, 143);"
  >
    Snapshot Test
  </span>
  <span
    aria-hidden="true"
    class="pointer-events-none absolute top-0 left-0 bg-clip-text text-[13px] leading-[1.667]! font-[420] text-transparent"
    style="background-size: 200% 100%; background-repeat: no-repeat; background-position: 120% 0%;"
  >
    Snapshot Test
  </span>
</div>
`;
